# lifeos-workbench

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
core/: auth.js  db.js
docs/: AGENT-CONTROL.md  ARCHITECTURE.md  BUILD-PLAN.md  DATA-MODEL.md  HARNESS-LOOP.md  INTEGRATIONS.md  MANUAL-SETUP.md  MEDIA-INTELLIGENCE.md  MODULES.md  PLATFORM-SYSTEMS.md  RUST-COMPONENTS.md  SECURITY.md  SELF-EXTENSION.md  VERSIONING.md
frontend/: DESIGN.md  FRONTEND.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
infra/nango/: .env.example
server/: package-lock.json  package.json  scaffold.js
services/: Cargo.toml
services/lifeos-api/: Cargo.toml
services/lifeos-api/src/: agents.rs  auth.rs  config.rs  crypto.rs  db.rs  error.rs  ids.rs  kite.rs  lib.rs  main.rs  models.rs  nango.rs  state.rs
services/lifeos-api/src/routes/: calendar.rs  drive.rs  edge.rs  entity.rs  event.rs  files.rs  gmail.rs  job.rs  metrics.rs  mod.rs  module_request.rs  notion.rs  planned.rs  register.rs  slack.rs  stream.rs  vcs.rs
services/lifeos-api/tests/: calendar.rs  connections.rs  files.rs  gmail.rs  integration.rs  integrations.rs  isolation.rs  kite.rs  notion.rs  reading.rs  search.rs  travel.rs  whatsapp.rs
workbench/: Cargo.toml
workbench/src/: acp.rs  agent_pane.rs  driver.rs  editor.rs  layout.rs  lib.rs  lsp.rs  main.rs  mouse.rs  palette.rs  pane_store.rs  shell.rs  term_pane.rs  theme.rs  workspace.rs
workbench/src/gui/: fonts.rs  input.rs  mod.rs
worker/: README.md  package-lock.json  package.json  wrangler.toml
(+59 files in other folders)
