[workspace]
resolver = "2"
members = ["."]

[package]
name = "lifeos-workbench"
version = "0.1.0"
edition = "2021"
description = "Terminal-weight, agent-native workbench over lifeos-api (linked in-process)"

[[bin]]
name = "workbench"
path = "src/main.rs"

[dependencies]
lifeos-api = { path = "../services/lifeos-api" }
axum = "0.7.5"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.38", features = ["full"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
alacritty_terminal = "0.24"
portable-pty = "0.8"

[dev-dependencies]
ulid = "1.1"
